hphp/hack/test/typecheck/reactive/rx_append2.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx>>
function a(Set<int> $a): void {
  $a[] = 1;
}
